# HamAmooz-task

./: .gitignore  README.md  pyproject.toml
log_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  io_utils.py  models.py  parser.py  report.py  security.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_io_utils.py  test_parser.py  test_report.py  test_security.py
