[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamamooz-log-analyzer"
version = "0.1.0"
description = "A streaming Combined Log Format analyzer"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
log-analyzer = "log_analyzer.cli:main"

[tool.setuptools]
packages = ["log_analyzer"]
